fix: :bug: add margin-bottom to blog menu for improved spacing

--- a/src/layouts/BlogLayout/userMobile.scss
+++ b/src/layouts/BlogLayout/userMobile.scss
@@ -25,6 +25,7 @@
 		}
 
 		&-menu {
+			margin-bottom: v.$padding;
 			color: rgb(v.$fnA);
 
 			svg {
